--- a/package.json
+++ b/package.json
@@ -8,12 +8,24 @@
     "start": "next start"
   },
   "dependencies": {
+    "@babel/core": "^7.14.0",
+    "@babel/preset-react": "^7.13.13",
+    "axios": "^0.21.1",
+    "babel-plugin-react-require": "^3.1.3",
+    "dotenv": "^9.0.0",
     "next": "10.2.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "storyblok-js-client": "^4.0.9",
+    "storyblok-react": "^0.1.2"
   },
   "devDependencies": {
     "postcss-preset-env": "^6.7.0",
     "tailwindcss": "^2.1.2"
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
   }
 }
