--- a/package.json
+++ b/package.json
@@ -12,20 +12,20 @@
     "@babel/preset-react": "^7.13.13",
     "axios": "^0.21.1",
     "babel-plugin-react-require": "^3.1.3",
-    "dotenv": "^9.0.0",
-    "next": "10.2.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "storyblok-js-client": "^4.0.9",
+    "i": "^0.3.6",
+    "marked": "^2.0.0",
+    "next": "10.0.7",
+    "npm": "^7.12.0",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "storyblok-js-client": "^3.3.1",
     "storyblok-react": "^0.1.2"
   },
   "devDependencies": {
+    "autoprefixer": "^10.2.4",
+    "postcss": "^8.2.6",
     "postcss-preset-env": "^6.7.0",
-    "tailwindcss": "^2.1.2"
-  },
-  "browser": {
-    "fs": false,
-    "path": false,
-    "os": false
+    "storyblok-rich-text-react-renderer": "^2.3.1",
+    "tailwindcss": "^2.0.3"
   }
 }
